# elevate-agent

./: .gitignore  README.md  package.json
cli/: .env.example  .gitignore  ACCESS_PROFILES.md  AGENTS.md  CHANGELOG.md  Dockerfile  ELEVATE_AGENT_STATE.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  cli-config.yaml.example  cli.py  constraints-termux.txt  docker-compose.yml  elevate  elevate_constants.py  elevate_logging.py  elevate_state.py  elevate_time.py  flake.nix  mcp_serve.py  mini_swe_runner.py  model_tools.py  package-lock.json  package.json  pyproject.toml  rl_cli.py  run_agent.py  setup-elevate.sh  toolsets.py  trajectory_compressor.py  utils.py
cli/.github/: PULL_REQUEST_TEMPLATE.md
cli/.plans/: openai-api-server.md  streaming-support.md
cli/acp_adapter/: __init__.py  auth.py  entry.py  permissions.py  server.py  session.py  tools.py
cli/acp_registry/: agent.json
cli/agent/: account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  azure_identity_adapter.py  background_review.py  bedrock_adapter.py  browser_provider.py  browser_registry.py  chat_completion_helpers.py  claude_code_cli_client.py  codex_responses_adapter.py  codex_runtime.py  compaction_trace.py  context_compressor.py  context_engine.py  context_references.py  conversation_compression.py  conversation_loop.py  copilot_acp_client.py  credential_pool.py  credential_sources.py  curator.py  curator_backup.py  cwd.py  display.py  error_classifier.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  gemini_schema.py  google_code_assist.py  google_oauth.py  i18n.py  image_gen_provider.py  image_gen_registry.py  image_routing.py  insights.py  iteration_budget.py  (+30 more)
cli/cron/: __init__.py  cycles.py  jobs.py  scheduler.py
cli/datagen-config-examples/: run_browser_tasks.sh  web_research.yaml
cli/docker/: SOUL.md  entrypoint.sh
cli/docs/: browser-loop-guard-and-stealth.md  central-data-model-v1-plan.md  central-data-model.md  compaction-redesign-HANDOFF.md  compaction-redesign-buildplan.md  compaction-redesign.md  database-contract.md  desktop-debug-route-inventory.tsv  elevate-harness.md  epic-compaction-session-parity-2026-06-17.md  epic-desktop-debugging-routes-2026-06-18.md  handoff-2026-05-13-settings.md  handoff-2026-05-14-onboarding-wizard.md  handoff-2026-05-14.md  handoff-2026-06-17-elevate-regression-subagents.md  jcode-memory-upgrade-plan.md  leads-state-2026-05-26.md  lofty-api-catalog.md  mac-sms-transport.md  memory-critical-tier-PLAN.md  memory-upgrade-status.md  native-rag-full-port-plan.md  production-readiness-master-checklist.md  release-1.2.0.md  release-1.2.1.md  release-1.2.10.md  release-1.2.11.md  release-1.2.12.md  release-1.2.13.md  release-1.2.14.md  release-1.2.15.md  release-1.2.16.md  release-1.2.17.md  release-1.2.18.md  release-1.2.19.md  release-1.2.2.md  release-1.2.20.md  release-1.2.21.md  release-1.2.22.md  release-1.2.23.md  (+38 more)
cli/elevate_cli/: __init__.py  _parser.py  _subprocess_compat.py  access.py  admin_deal_flow.py  agent_hub.py  agent_policy.py  agent_worker.py  apple_contacts.py  apple_contacts_backfill.py  auth.py  auth_commands.py  ayrshare_client.py  azure_detect.py  backup.py  banner.py  browser_connect.py  bundles.py  callbacks.py  checkpoints.py  claw.py  cli_output.py  clipboard.py  cloud_automations.py  cloud_skills.py  codex_models.py  codex_runtime_plugin_migration.py  codex_runtime_switch.py  colors.py  commands.py  completion.py  composio_capabilities.json  composio_client.py  composio_inbound.py  config.py  copilot_auth.py  cron.py  curator.py  curses_ui.py  data_cli.py  (+103 more)
cli/environments/: README.md  __init__.py  agent_loop.py  agentic_opd_env.py  elevate_base_env.py  hermes_base_env.py  patches.py  tool_context.py  web_research_env.py
cli/gateway/: __init__.py  agent_lanes.py  channel_directory.py  config.py  delivery.py  display_config.py  guardrails.py  hooks.py  memory_monitor.py  mirror.py  orchestration.py  pairing.py  platform_registry.py  restart.py  run.py  runtime_footer.py  session.py  session_context.py  shutdown_forensics.py  status.py  sticker_cache.py  stream_consumer.py  usage_ledger.py  whatsapp_identity.py
cli/nix/: checks.nix  configMergeScript.nix  devShell.nix  lib.nix  nixosModules.nix  packages.nix  python.nix  tui.nix  web.nix
cli/optional-skills/: DESCRIPTION.md
cli/plans/: chat-transcript-refactor.md  gemini-oauth-provider.md
cli/plugins/: __init__.py
cli/providers/: README.md  __init__.py  base.py
cli/scripts/: build_skills_index.py  compaction_log_summary.py  contributor_audit.py  discord-voice-doctor.py  elevate-harness.sh  elevate_context_efficiency.py  elevate_separation_audit.py  generate_debug_route_inventory.py  import_cortextos_skills.py  install.cmd  install.ps1  install.sh  installed_runtime_smoke.py  kill_modal.sh  ragent-gateway  release.py  run_tests.sh  sample_and_compress.py
cli/tests/: conftest.py  test_access_profiles.py  test_agent_activity_digest.py  test_cli_skin_integration.py  test_client_message_id.py  test_compact_command_alias.py  test_compaction_log_summary.py  test_compaction_metadata.py  test_empty_model_fallback.py  test_hermes_constants.py  test_hermes_logging.py  test_hermes_state.py  test_ipv4_preference.py  test_mcp_serve.py  test_minimax_model_validation.py  test_model_tools.py  test_packaging_metadata.py  test_plugin_skills.py  test_project_metadata.py  test_session_preview_filter.py  test_subprocess_home_isolation.py  test_timezone.py  test_toolsets.py  test_trajectory_compressor.py  test_transform_tool_result_hook.py  test_tui_gateway_server.py  test_utils_truthy_values.py
cli/tools/: __init__.py  admin_deal_tool.py  admin_profile_tool.py  agent_bus_tool.py  agent_handoff_tool.py  approval.py  browser_camofox.py  browser_camofox_state.py  browser_cdp_tool.py  browser_stealth.py  browser_supervisor.py  browser_tool.py  budget_config.py  checkpoint_manager.py  clarify_gateway.py  code_execution_tool.py  composio_tool.py  computer_tool.py  credential_files.py  cronjob_tools.py  deals_overview_tool.py  (+54 more)
(+15682 files in other folders)
