[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elevate"
version = "0.11.0"
description = "AI chief of staff for real estate agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Elevation Real Estate HQ" }]
license = { text = "MIT" }
dependencies = [
  # Core — pinned to known-good ranges to limit supply chain attack surface
  "openai>=2.21.0,<3",
  "anthropic>=0.39.0,<1",
  "python-dotenv>=1.2.1,<2",
  "fire>=0.7.1,<1",
  "httpx[socks]>=0.28.1,<1",
  "rich>=14.3.3,<15",
  "tenacity>=9.1.4,<10",
  "pyyaml>=6.0.2,<7",
  # The local gateway always runs the cron scheduler; cron expressions need
  # this parser even when users did not install the optional cron extra.
  "croniter>=6.0.0,<7",
  "requests>=2.33.0,<3",  # CVE-2026-25645
  "jinja2>=3.1.5,<4",
  "pydantic>=2.12.5,<3",
  # Interactive CLI (prompt_toolkit is used directly by cli.py)
  "prompt_toolkit>=3.0.52,<4",
  # Tools
  "exa-py>=2.9.0,<3",
  "firecrawl-py>=4.16.0,<5",
  "parallel-web>=0.4.2,<1",
  "fal-client>=0.13.1,<1",
  # Text-to-speech (Edge TTS is free, no API key needed)
  "edge-tts>=7.2.7,<8",
  # Skills Hub (GitHub App JWT auth — optional, only needed for bot identity)
  "PyJWT[crypto]>=2.12.0,<3",  # CVE-2026-32597
  # Lightweight browser harness/CDP worker
  "websockets>=15.0.1,<16",
  # PDF rendering + image downscaling for native multimodal attachments
  "pymupdf>=1.24.0,<2",
  # Cross-platform process / PID management.  Used for TTS subprocess
  # cleanup, env probes, and other cross-platform process operations.
  # Replaces POSIX-only os.kill / os.killpg idioms that silently break
  # on Windows.
  "psutil>=7.0,<8",
  # Embedded Postgres data layer.  pgserver ships a bundled Postgres 16
  # binary (~80MB, one-time download into ~/.cache/pgserver/) so end users
  # don't have to install Postgres themselves; psycopg[binary] is the
  # async driver the gateway uses.  Required at first boot — gateway
  # crashes on import without these.
  "pgserver>=0.1.4,<1",
  "psycopg[binary]>=3.3.4,<4",
  "psycopg-pool>=3.3.1,<4",
  # Note: pgvector is a Postgres-side EXTENSION (CREATE EXTENSION vector),
  # bundled inside pgserver's Postgres 16 binary.  No Python-side import.
  # Vectors are currently stored as bytea; the extension is loaded so the
  # schema can later move to native vector(N) columns without re-init.
]

[project.optional-dependencies]
modal = ["modal>=1.0.0,<2"]
daytona = ["daytona>=0.148.0,<1"]
dev = [
  "debugpy>=1.8.0,<2",
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-xdist>=3.0,<4",
  "mcp>=1.2.0,<2",
  "ty>=0.0.1a29,<0.0.22",
  "ruff",
  # Dashboard chat tests exercise the PTY-backed embedded TUI.
  "ptyprocess>=0.7.0,<1; sys_platform != 'win32'",
  "pywinpty>=2.0.0,<3; sys_platform == 'win32'",
]
messaging = ["python-telegram-bot[webhooks]>=22.6,<23", "discord.py[voice]>=2.7.1,<3", "aiohttp>=3.13.3,<4", "slack-bolt>=1.18.0,<2", "slack-sdk>=3.27.0,<4", "qrcode>=7.0,<8"]
cron = ["croniter>=6.0.0,<7"]
slack = ["slack-bolt>=1.18.0,<2", "slack-sdk>=3.27.0,<4"]
matrix = ["mautrix[encryption]>=0.20,<1", "Markdown>=3.6,<4", "aiosqlite>=0.20", "asyncpg>=0.29"]
cli = ["simple-term-menu>=1.0,<2"]
tts-premium = ["elevenlabs>=1.0,<2"]
voice = [
  # Local STT pulls in wheel-only transitive deps (ctranslate2, onnxruntime),
  # so keep it out of the base install for source-build packagers like Homebrew.
  "faster-whisper>=1.0.0,<2",
  "sounddevice>=0.4.6,<1",
  "numpy>=1.24.0,<3",
]
pty = [
  "ptyprocess>=0.7.0,<1; sys_platform != 'win32'",
  "pywinpty>=2.0.0,<3; sys_platform == 'win32'",
]
honcho = ["honcho-ai>=2.0.1,<3"]
mcp = ["mcp>=1.2.0,<2"]
homeassistant = ["aiohttp>=3.9.0,<4"]
sms = ["aiohttp>=3.9.0,<4"]
acp = ["agent-client-protocol>=0.9.0,<1.0"]
mistral = ["mistralai>=2.3.0,<3"]
bedrock = ["boto3>=1.35.0,<2"]
termux = [
  # Tested Android / Termux path: keeps the core CLI feature-rich while
  # avoiding extras that currently depend on non-Android wheels (notably
  # faster-whisper -> ctranslate2 via the voice extra).
  "python-telegram-bot[webhooks]>=22.6,<23",
  "elevate[cron]",
  "elevate[cli]",
  "elevate[pty]",
  "elevate[mcp]",
  "elevate[honcho]",
  "elevate[acp]",
]
dingtalk = ["dingtalk-stream>=0.20,<1", "alibabacloud-dingtalk>=2.0.0", "qrcode>=7.0,<8"]
feishu = ["lark-oapi>=1.5.3,<2", "qrcode>=7.0,<8"]
# `elevate dashboard` (localhost SPA + API).  Not in core to keep the default install lean.
web = ["fastapi>=0.104.0,<1", "uvicorn[standard]>=0.24.0,<1"]
rl = [
  "atroposlib @ git+https://github.com/NousResearch/atropos.git@c20c85256e5a45ad31edf8b7276e9c5ee1995a30",
  "tinker @ git+https://github.com/thinking-machines-lab/tinker.git@30517b667f18a3dfb7ef33fb56cf686d5820ba2b",
  "fastapi>=0.104.0,<1",
  "uvicorn[standard]>=0.24.0,<1",
  "wandb>=0.15.0,<1",
]
yc-bench = ["yc-bench @ git+https://github.com/collinear-ai/yc-bench.git@bfb0c88062450f46341bd9a5298903fc2e952a5c ; python_version >= '3.12'"]
all = [
  "elevate[modal]",
  "elevate[daytona]",
  "elevate[messaging]",
  # matrix: python-olm (required by matrix-nio[e2e]) is upstream-broken on
  # modern macOS (archived libolm, C++ errors with Clang 21+).  On Linux the
  # [matrix] extra's own marker pulls in the [e2e] variant automatically.
  "elevate[matrix]; sys_platform == 'linux'",
  "elevate[cron]",
  "elevate[cli]",
  "elevate[dev]",
  "elevate[tts-premium]",
  "elevate[slack]",
  "elevate[pty]",
  "elevate[honcho]",
  "elevate[mcp]",
  "elevate[homeassistant]",
  "elevate[sms]",
  "elevate[acp]",
  "elevate[voice]",
  "elevate[dingtalk]",
  "elevate[feishu]",
  "elevate[mistral]",
  "elevate[bedrock]",
  "elevate[web]",
]

[project.scripts]
elevate = "elevate_cli.main:main"
elevate-agent = "run_agent:main"
elevate-acp = "acp_adapter.entry:main"

[tool.setuptools]
py-modules = ["run_agent", "model_tools", "toolsets", "batch_runner", "trajectory_compressor", "toolset_distributions", "cli", "elevate_constants", "elevate_state", "elevate_time", "elevate_logging", "rl_cli", "utils"]

[tool.setuptools.package-data]
elevate_cli = ["web_dist/**/*"]

[tool.setuptools.packages.find]
include = ["agent", "agent.*", "tools", "tools.*", "elevate_cli", "elevate_cli.*", "gateway", "gateway.*", "tui_gateway", "tui_gateway.*", "cron", "acp_adapter", "plugins", "plugins.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (API keys, Modal, etc.)",
]
addopts = "-m 'not integration' -n auto"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unknown-argument = "warn"
redundant-cast = "ignore"

[tool.ty.src]
exclude = ["**"]

[[tool.ty.overrides]]
include = ["**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"
not-iterable = "ignore"

[tool.ruff]
exclude = ["*"]

[tool.uv]
exclude-newer = "7 days"
